test/expected/unterminated_quote.out
shit: 1:1: error: Unterminated string literal.
     1 |  "quote?
       |  ^~~~~~~ here.
shit: 1:8: note:
     1 |  "quote?
       |         ^~ Expected " here.
